css/about.css
#about{
    align-items: center;
    background-color: #fff;
    display: flex;
    height: 100vh;
    justify-content: center;
    padding: 10rem;
    position: relative;
}

.about-img{
    width: 30rem;
    height: 25rem;
    border-radius: 1.5rem;
    margin-right: 2.5rem;
}

.about-container {
    align-items: center;
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-content: center;
}

.about-content{
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    justify-content: center;
    position: relative;
}

.about-body{
    align-items: center;
    display: flex;
    gap: 5rem;
}

.about-content h1{
    font-size: 2em;
    color: #147efb;
}

.about-text{
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;
    position: relative;
    max-width: 50rem;
    max-height: 25rem;
}

.about-text h2{
    font-size: 1.5em;
    font-weight: 500;
}

.about-text p{
    font-size: 1.2em;
    font-weight: 300;
    line-height: 2;
    text-align: justify;
}

@media (max-width: 1200px) {
    #about{
        height: auto;
        align-items: center;
        justify-content: center;
        padding: 1rem;
    }

    .about-container{
        display: flex;
        flex-direction: column;
        gap: 5rem;
    }

    .about-text{
        max-width: 50rem;
    }

    .about-text h2{
        font-size: 1.2em; 
    }

    .about-text p{
        font-size: 1em;
    }
}

